# conan_editable_test

./: .editorconfig  .gitignore  LICENSE  README.md
project_a/: CMakeLists.txt  conanfile.py
project_a/include/: prj_a.h
project_a/src/: prj_a.cpp
project_a/test_package/: CMakeLists.txt  conanfile.py
project_a/test_package/src/: example.cpp
project_a_comp/: CMakeLists.txt  conanfile.py
project_a_comp/include/: prj_a_comp.h
project_a_comp/src/: prj_a_comp.cpp
project_a_comp/test_package/: CMakeLists.txt  conanfile.py
project_a_comp/test_package/src/: example.cpp
project_b/: CMakeLists.txt  conanfile.py
project_b/include/: prj_b.h
project_b/src/: main.cpp  prj_b.cpp
project_b/test_package/: conanfile.py
project_b_comp/: CMakeLists.txt  conanfile.py
project_b_comp/include/: prj_b_comp.h
project_b_comp/src/: main.cpp  prj_b_comp.cpp
project_b_comp/test_package/: conanfile.py
